--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding:0;
 }
 
 code {
@@ -7,31 +8,131 @@ code {
     monospace;
 }
 
+/* 상단 아이콘 */
 .header{
-  float: right;
-  height: 10%;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  display: flex;
+  justify-content: right;
+  align-items: center;
 }
 
-.header > button{
-  border: none;
+.header > p {
+  margin: 10px;
+  cursor: pointer;
 }
 
+.header > p:hover {
+  text-decoration: underline;
+}
+
+.header > img{
+  width: 30px;
+  margin: 10px;
+  cursor: pointer;
+}
+
+
+/* 중앙 이미지 */
 .main_img{
-  height: 30%;
+  width: 100%;
+  height: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: end;
 }
 
+.main_img > img {
+  padding-bottom: 30px;
+}
+
+/* 중앙 검색 */
 .main_content{
-  height: 10%;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.main_button{
-  height: 30%;
+.search_div{
+  height: 40px;
+  width: 500px;
+  border: 1px solid gray;
+  border-radius: 20px;
+  box-shadow: 1px 2px 3px 1px gray;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.main_button > button{
+.search_div > input{
   border: none;
+  width: 400px;
+  height: 30px;
+  outline: none;
+  font-size: large;
 }
 
-.footer{
-  height: 10%;
+.search_div > img {
+  display: inline-block;
+  width: 30px;
 }
+
+
+/* 중앙 아이콘 */
+.main_button{
+  width: 100%;
+  height: 520px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: first baseline;
+}
+
+.main_button > div{
+  width: 120px;
+  height: 130px;
+  cursor: pointer;
+}
+
+.main_button > div:hover{
+  background-color: lightgray;
+}
+
+
+/* 하단 아이콘 */
+.footer{
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+}
+
+.setting{
+  width: 180px;
+  height: 40px;
+  border: 1px solid gray;
+  border-radius: 20px;
+  background-color: white;
+  padding: 0px 3px;
+  /* 그림자 출력 */
+  box-shadow: 1px 2px 3px 1px gray;
+  margin-right: 10px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.setting > img {
+  height: 30px;
+  width: 30px;
+}
+
+.setting > p {
+}
+
