--- a/src/index.css
+++ b/src/index.css
@@ -11,16 +11,17 @@ code {
 /* 상단 아이콘 */
 .header{
   width: 100%;
-  height: 50px;
+  height: 80px;
   text-align: center;
   display: flex;
   justify-content: right;
   align-items: center;
 }
 
-.header > p {
+.header > p > a {
   margin: 10px;
   cursor: pointer;
+  text-decoration-line: none;
 }
 
 .header > p:hover {
@@ -29,8 +30,16 @@ code {
 
 .header > img{
   width: 30px;
-  margin: 10px;
+  margin: 10px 15px;
   cursor: pointer;
+}
+
+a:visited {
+  color: black;
+}
+
+a:active {
+  color: black;
 }
 
 
@@ -84,7 +93,7 @@ code {
 /* 중앙 아이콘 */
 .main_button{
   width: 100%;
-  height: 520px;
+  height: 500px;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -92,6 +101,7 @@ code {
 }
 
 .main_button > div{
+  padding-top: 25px;
   width: 120px;
   height: 130px;
   cursor: pointer;
@@ -131,8 +141,5 @@ code {
 .setting > img {
   height: 30px;
   width: 30px;
-}
-
-.setting > p {
 }
 
